[tool.poetry]
name = "async-chat-client"
version = "0.1.0"
description = ""
authors = ["Matvey Skirda <bookworm@mskirda.ru>"]
readme = "README.md"
packages = [{include = "async_chat_client"}]

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.2.1"
aioconsole = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
